tests/expectations/parser/program/pipe_eof.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected : -- found '='
    --> test:5:15
     |
   5 |         let x = 1u8;
     |               ^"""]
